--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21"
